--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://kit.fontawesome.com/f783d5d9d5.js" crossorigin="anonymous"></script>
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
-    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap-theme.min.css" integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ" crossorigin="anonymous"> -->
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
+    <!-- <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet"> -->
+    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <link rel = "icon" href ="/assets/img/logo.png" type = "image/x-icon">
-    <link href="/path/to/tailwind.css" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>First Light Adventure | FLA</title>
 </head>
@@ -49,36 +49,50 @@
         </div>
     </section>
 
-    <section class="about" id="about">
-        <div class="max-width">
-            <h2 class="title">Upcomming Trip's</h2>
-            <div class="about-content">
-                <div class="ui-card">
-                    <img class="card-img" src="./assets/img/card1.jpg">
-                    <div class="description">
-                        <h3>Card 1</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
-                        <a href="#">Read More</a>
-                    </div>
-                </div>
-                <div class="ui-card">
-                    <img class="card-img" src="./assets/img/card2.jpg">
-                    <div class="description">
-                        <h3>Card 2</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
-                        <a href="#">Read More</a>
-                    </div>
-                </div>
-                <div class="ui-card">
-                    <img class="card-img" src="./assets/img/card3.jpg">
-                    <div class="description">
-                        <h3>Card 3</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
-                        <a href="#">Read More</a>
-                    </div>
-                </div>          
+    <section class="about">
+    <div class="max-width">
+        <h2 class="title">Upcomming Trip's</h2>
+    <div class="about-content">
+    <div class="text-gray-600 body-font">
+        <div class="container px-5 py-2 mx-auto">
+          <div class="flex flex-wrap -mx-4 -mb-10 text-center">
+            <div class="sm:w-1/2 mb-10 px-4">
+              <div class="rounded-lg h-64 overflow-hidden">
+                <img alt="content" class="object-cover object-center h-full w-full" src="/assets/img/card1.jpg">
+              </div>
+              <h2 class="title-font text-2xl font-medium text-gray-900 mt-6 mb-3">Card 1</h2>
+              <p class="card-p leading-relaxed text-base">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, necessitatibus?</p>
+              <a href="#" class="card-btn">Read More</a>
             </div>
+            <div class="sm:w-1/2 mb-10 px-4">
+              <div class="rounded-lg h-64 overflow-hidden">
+                <img alt="content" class="object-cover object-center h-full w-full" src="/assets/img/card2.jpg">
+              </div>
+              <h2 class="title-font text-2xl font-medium text-gray-900 mt-6 mb-3">Card 2</h2>
+              <p class="card-p leading-relaxed text-base">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis, laborum.</p>
+              <a href="#" class="card-btn">Read More</a>
+            </div>
+            <div class="sm:w-1/2 mb-10 px-4">
+                <div class="rounded-lg h-64 overflow-hidden">
+                  <img alt="content" class="object-cover object-center h-full w-full" src="/assets/img/card3.jpg">
+                </div>
+                <h2 class="title-font text-2xl font-medium text-gray-900 mt-6 mb-3">Card 3</h2>
+                <p class="card-p leading-relaxed text-base">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam, deserunt.</p>
+                <a href="#" class="card-btn">Read More</a>
+            </div>
+            <div class="sm:w-1/2 mb-10 px-4">
+                <div class="rounded-lg h-64 overflow-hidden">
+                  <img alt="content" class="object-cover object-center h-full w-full" src="/assets/img/card1.jpg">
+                </div>
+                <h2 class="title-font text-2xl font-medium text-gray-900 mt-6 mb-3">Card 4</h2>
+                <p class="card-p leading-relaxed text-base">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo, vel adipsicing|</p>
+                <a href="#" class="card-btn">Read More</a>
+            </div>
+          </div>
         </div>
+      </div>
+    </div>
+    </div>
     </section>
 
     <section class="about gallery" id="gallery">
@@ -121,101 +135,67 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="/assets/img/card2.jpg" alt="">
-                        <div class="text">Member 2</div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    </div>
-                </div>
-                    <div class="card">
-                    <div class="box">
-                        <img src="/assets/img/slider3.jpg" alt="">
-                        <div class="text">Member 3</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="box">
                         <img src="/assets/img/random-2.jpeg" alt="">
-                        <div class="text">Member 4</div>
+                        <div class="text">Member 2</div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                        </div>
                     </div>
-                    <div class="card">
-                        <div class="box">
-                        <img src="/assets/img/coverimg.jpg" alt="">
-                        <div class="text">Member 5</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                        </div>
-                    </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="contact" id="contact">
-        <div class="max-width">
-            <h2 class="title">Contact Me</h2>
-                <div class="contact-content">
-                <div class="column left">
-                    <div class="text">Get In Touch</div>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos harum corporis fuga corrupti. Doloribus quis soluta nesciunt veritatis vitae nobis?</p>
-                    <div class="icons">
-                        <div class="row">
-                            <a href="#"><i class="fab fa-facebook social"></i></a>
-                            <a href="#"><i class="fab fa-instagram social"></i></a>
-                            <a href="#"><i class="fab fa-twitter social"></i></a>
-                        </div>
-                        <div class="row">
-                        <i class="fas fa-map-marker-alt"></i>
-                        <div class="info">
-                            <div class="head">Address</div>
-                            <div class="sub-title">KPK, Pakistan</div>
-                        </div>
-                        </div>
-                        <div class="row">
-                        <i class="fas fa-envelope"></i>
-                        <div class="info">
-                            <div class="head">Email</div>
-                            <div class="sub-title">abc@gmail.com</div>
-                        </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="column right">
-                    <div class="text">Message Me</div>
-                    <form action="#">
-                        <div class="fields">
-                            <div class="field name">
-                                <input type="text" placeholder="Name" required>
-                            </div>
-                        <div class="field email">
-                                <input type="email" placeholder="Email" required>
-                            </div>
-                        </div>
-                        <div class="field">
-                            <input type="text" placeholder="Subject" required>
-                        </div>
-                            <div class="field textarea">
-                            <changeit cols="30" rows="10" placeholder="Message.." required></changeit>
-                        </div>
-                            <div class="button">
-                            <button type="submit">Send Message</button>
-                            </div>
-                    </form>
                 </div>
             </div>
         </div>
     </section>
 
+    <section class="text-gray-600 body-font relative">
+      <div class="container px-5 py-24 mx-auto">
+        <div class="flex flex-col text-center w-full mb-12">
+          <h2 class="title">Contact</h2>
+        </div>
+        <div class="lg:w-1/2 md:w-2/3 mx-auto">
+          <div class="flex flex-wrap -m-2">
+            <div class="p-2 w-1/2">
+              <div class="relative">
+                <label for="name" class="leading-7 text-sm text-gray-600">Name</label>
+                <input type="text" id="name" name="name" class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-yellow-500 focus:bg-white focus:ring-2 focus:ring-yellow-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
+              </div>
+            </div>
+            <div class="p-2 w-1/2">
+              <div class="relative">
+                <label for="email" class="leading-7 text-sm text-gray-600">Email</label>
+                <input type="email" id="email" name="email" class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-yellow-500 focus:bg-white focus:ring-2 focus:ring-yellow-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
+              </div>
+            </div>
+            <div class="p-2 w-full">
+              <div class="relative">
+                <label for="message" class="leading-7 text-sm text-gray-600">Message</label>
+                <textarea id="message" name="message" class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-yellow-500 focus:bg-white focus:ring-2 focus:ring-yellow-200 h-32 text-base outline-none text-gray-700 py-1 px-3 resize-none leading-6 transition-colors duration-200 ease-in-out"></textarea>
+              </div>
+            </div>
+            <div class="p-2 w-full">
+              <button type="" class="submit-btn flex mx-auto text-white bg-yellow-500 border-0 py-2 px-8 focus:outline-none hover:bg-yellow-600 rounded text-lg">Send Message</button>
+            </div>
+            <div class="p-2 w-full pt-8 mt-8 border-t border-gray-200 text-center">
+              <a class="text-yellow-500">abcd@email.com</a>
+              <p class="leading-normal my-5">+920123456789
+                <br>Peshawar, KPK, Pakistan
+              </p>
+              <span class="inline-flex">
+                <a href="#"><i class="fab fa-facebook social"></i></a>
+                <a href="#"><i class="fab fa-instagram social"></i></a>
+                <a href="#"><i class="fab fa-twitter social"></i></a>
+              </span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <footer>
         <span>Copyright <span class="far fa-copyright"></span> 2021 All Rights Reserved, First Light Adventure</span>
-        <div class="row ">
+        <!-- <div class="row ">
             <a href="#"><i class="fab fa-facebook social"></i></a>
             <a href="#"><i class="fab fa-instagram social"></i></a>
             <a href="#"><i class="fab fa-twitter social"></i></a>
-        </div>
+        </div> -->
     </footer>
-      
 
       <script src="/assets/js/main.js"></script>
 </body>
