--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="/about.html" class="menu-btn">About</a></li>
-                <li><a href="#gallery" class="menu-btn">Gallery</a></li>
+                <li><a href="/gallery.html" class="menu-btn">Gallery</a></li>
                 <li><a href="#teams" class="menu-btn">Teams</a></li>
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
             </ul>
@@ -43,50 +43,50 @@
             <div class="home-content">
                 <div class="text-1">Welcome to</div>
                 <div class="text-2">First Light Adventure</div>
-                <div class="text-3">The most beautiful thing in the world is, of course, the <span> world </span> itself</div>
-                <div class="text-btn"><a href="#">Get Started</a></div>
+                <div class="text-3">The most beautiful thing in the world is of course, the <span> world </span> itself</div>
+                <div class="text-btn"><a href="#trip">Get Started</a></div>
             </div>
         </div>
     </section>
 
-    <section class="about">
+    <section class="about" id="trip">
     <div class="max-width">
         <h2 class="title">Upcomming Trip's</h2>
-    <div class="about-content">
+    <div class="about-content cards">
     <div class="text-gray-600 body-font">
         <div class="container px-5 py-2 mx-auto">
           <div class="flex flex-wrap -mx-4 -mb-10 text-center">
             <div class="sm:w-1/2 mb-10 px-4">
               <div class="rounded-lg h-64 overflow-hidden">
-                <img alt="content" class="object-cover object-center h-full w-full" src="/assets/img/card1.jpg">
+                <a href="/assets/img/card1.jpg" target="_blank"><img alt="content" class="object-cover object-center h-full w-full" src="/assets/img/card1.jpg"></a>
               </div>
               <h2 class="title-font text-2xl font-medium text-gray-900 mt-6 mb-3">Card 1</h2>
               <p class="card-p leading-relaxed text-base">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, necessitatibus?</p>
-              <a href="#" class="card-btn">Read More</a>
+              <a href="/trip.html" class="card-btn">Read More</a>
             </div>
             <div class="sm:w-1/2 mb-10 px-4">
               <div class="rounded-lg h-64 overflow-hidden">
-                <img alt="content" class="object-cover object-center h-full w-full" src="/assets/img/card2.jpg">
+                <a href="/assets/img/card2.jpg" target="_blank"><img alt="content" class="object-cover object-center h-full w-full" src="/assets/img/card2.jpg"></a>
               </div>
               <h2 class="title-font text-2xl font-medium text-gray-900 mt-6 mb-3">Card 2</h2>
               <p class="card-p leading-relaxed text-base">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis, laborum.</p>
-              <a href="#" class="card-btn">Read More</a>
+              <a href="/trip.html" class="card-btn">Read More</a>
             </div>
             <div class="sm:w-1/2 mb-10 px-4">
                 <div class="rounded-lg h-64 overflow-hidden">
-                  <img alt="content" class="object-cover object-center h-full w-full" src="/assets/img/card3.jpg">
+                  <a href="/assets/img/card3.jpg" target="_blank"><img alt="content" class="object-cover object-center h-full w-full" src="/assets/img/card3.jpg"></a>
                 </div>
                 <h2 class="title-font text-2xl font-medium text-gray-900 mt-6 mb-3">Card 3</h2>
                 <p class="card-p leading-relaxed text-base">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam, deserunt.</p>
-                <a href="#" class="card-btn">Read More</a>
+                <a href="/trip.html" class="card-btn">Read More</a>
             </div>
             <div class="sm:w-1/2 mb-10 px-4">
                 <div class="rounded-lg h-64 overflow-hidden">
-                  <img alt="content" class="object-cover object-center h-full w-full" src="/assets/img/card1.jpg">
+                  <a href="/assets/img/card1.jpg" target="_blank"><img alt="content" class="object-cover object-center h-full w-full" src="/assets/img/card1.jpg"></a>
                 </div>
                 <h2 class="title-font text-2xl font-medium text-gray-900 mt-6 mb-3">Card 4</h2>
                 <p class="card-p leading-relaxed text-base">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo, vel adipsicing|</p>
-                <a href="#" class="card-btn">Read More</a>
+                <a href="/trip.html" class="card-btn">Read More</a>
             </div>
           </div>
         </div>
@@ -117,9 +117,9 @@
                 </div>
             </div>
         </div>
-        <div class="gall-btn">
-            <a class="gall-a" href="#">Check Out More</a>
-        </div>
+        <!-- <div class="gall-btn"> -->
+            <a class=" card-btn" href="/gallery.html">Check Out More</a>
+        <!-- </div> -->
     </section>
 
     <section class="teams" id="teams">
@@ -131,6 +131,10 @@
                         <img src="/assets/img/random-1.jpg" alt="">
                         <div class="text">Member 1</div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <div class="soc">
+                          <a href="https://www.facebook.com/First-Light-Adventure-105579995288760/" target="_blank"><i class="fab fa-facebook social"></i></a>
+                          <a href="https://instagram.com/first_lightadventure?utm_medium=copy_link" target="_blank"><i class="fab fa-instagram social"></i></a>
+                        </div>  
                     </div>
                 </div>
                 <div class="card">
@@ -138,13 +142,17 @@
                         <img src="/assets/img/random-2.jpeg" alt="">
                         <div class="text">Member 2</div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    </div>
+                        <div class="soc">
+                          <a href="https://www.facebook.com/First-Light-Adventure-105579995288760/" target="_blank"><i class="fab fa-facebook social"></i></a>
+                          <a href="https://instagram.com/first_lightadventure?utm_medium=copy_link" target="_blank"><i class="fab fa-instagram social"></i></a>
+                        </div>  
+                      </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="text-gray-600 body-font relative">
+    <section class="text-gray-600 body-font relative" id="contact">
       <div class="container px-5 py-24 mx-auto">
         <div class="flex flex-col text-center w-full mb-12">
           <h2 class="title">Contact</h2>
@@ -178,9 +186,9 @@
                 <br>Peshawar, KPK, Pakistan
               </p>
               <span class="inline-flex">
-                <a href="#"><i class="fab fa-facebook social"></i></a>
-                <a href="#"><i class="fab fa-instagram social"></i></a>
-                <a href="#"><i class="fab fa-twitter social"></i></a>
+                <a href="https://www.facebook.com/First-Light-Adventure-105579995288760/" target="_blank"><i class="fab fa-facebook social"></i></a>
+                <a href="https://instagram.com/first_lightadventure?utm_medium=copy_link" target="_blank"><i class="fab fa-instagram social"></i></a>
+                <!-- <a href="#"><i class="fab fa-twitter social"></i></a> -->
               </span>
             </div>
           </div>
@@ -189,12 +197,7 @@
     </section>
 
     <footer>
-        <span>Copyright <span class="far fa-copyright"></span> 2021 All Rights Reserved, First Light Adventure</span>
-        <!-- <div class="row ">
-            <a href="#"><i class="fab fa-facebook social"></i></a>
-            <a href="#"><i class="fab fa-instagram social"></i></a>
-            <a href="#"><i class="fab fa-twitter social"></i></a>
-        </div> -->
+      <span><span class="far fa-copyright"></span> 2021 All Rights Reserved, First Light Adventure | Powered By <a href="#">XYZ Group</a></span>
     </footer>
 
       <script src="/assets/js/main.js"></script>
