--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </div>
             <div class="sm:w-1/2 mb-10 px-4">
               <div class="rounded-lg h-64 overflow-hidden">
-                <a href="/assets/img/card2.jpg" target="_blank"><img alt="content" class="object-cover object-center h-full w-full" src="/assets/img/card2.jpg"></a>
+                <a href="/trip.html" target="_blank"><img alt="content" class="object-cover object-center h-full w-full" src="/assets/img/card2.jpg"></a>
               </div>
               <h2 class="title-font text-2xl font-medium text-gray-900 mt-6 mb-3">Card 2</h2>
               <p class="card-p leading-relaxed text-base">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis, laborum.</p>
