--- a/trip.html
+++ b/trip.html
@@ -64,7 +64,7 @@
                     <div class="trip-icons">
                         <p><i class="fas fa-users fa-2x trip-i"></i>Upto 10 people</p>
                         <p><i class="far fa-clock fa-2x trip-i"></i>Duration: 12 hours</p>
-                        <p><i class="fas fa-running fa-2x trip-i"></i>Activity Level: Moderate</p>
+                        <p><i class="fas fa-running fa-2x trip-i"></i>Activity: Moderate</p>
                     </div>    
                     <div class="text trip-text"><h1>Starting From <span>2000 Pkr</span> / Person</h1></div>
                     <a href="/contact.html">Book Now</a>
@@ -118,7 +118,7 @@
     </section>
     
     <footer>
-      <span><span class="far fa-copyright"></span> 2021 All Rights Reserved, First Light Adventure | Powered By <a href="#">XYZ Group</a></span>
+        <span>Copyright <span class="far fa-copyright"></span> 2021 All Rights Reserved, First Light Adventure | Powered By <a href="#">XYZ Group</a></span>
     </footer>
 
       <script src="/assets/js/main.js"></script>
