--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
     </section>
 
     <section class="about" id="trip">
-    <div class="max-width">
+    <!-- <div class="contact-width"> -->
         <h2 class="title">Upcomming Trip's</h2>
+        <div class="contact-width">    
     <div class="about-content cards">
     <div class="text-gray-600 body-font">
         <div class="container px-5 py-2 mx-auto">
@@ -101,15 +102,15 @@
             <div class="about-content">
                 <div class="slideshow-container">
                     <div class="mySlides fade">
-                      <img src="/assets/img/slider1.jpg" style="width:100%">
+                      <img src="/assets/img/slider1.jpg">
                       <div class="slider-text">Caption One</div>
                     </div>
                     <div class="mySlides fade">
-                      <img src="/assets/img/slider2.jpg" style="width:100%">
+                      <img src="/assets/img/slider2.jpg">
                       <div class="slider-text">Caption Two</div>
                     </div>
                     <div class="mySlides fade">
-                      <img src="/assets/img/slider3.jpg" style="width:100%">
+                      <img src="/assets/img/slider3.jpg">
                       <div class="slider-text">Caption Three</div>
                     </div>
                     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -152,53 +153,53 @@
         </div>
     </section>
 
-    <section class="text-gray-600 body-font relative" id="contact">
-      <div class="container px-5 py-24 mx-auto">
-        <div class="flex flex-col text-center w-full mb-12">
-          <h2 class="title">Contact</h2>
-        </div>
-        <div class="lg:w-1/2 md:w-2/3 mx-auto">
-          <div class="flex flex-wrap -m-2">
-            <div class="p-2 w-1/2">
-              <div class="relative">
-                <label for="name" class="leading-7 text-sm text-gray-600">Name</label>
-                <input type="text" id="name" name="name" class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-yellow-500 focus:bg-white focus:ring-2 focus:ring-yellow-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
+      <section class="text-gray-600 body-font relative contact-width contact-width-new" id="contact">
+        <div class="container px-5 py-24 mx-auto">
+          <div class="flex flex-col text-center w-full mb-12">
+            <h2 class="title">Contact</h2>
+          </div>
+          <div class="lg:w-1/2 md:w-2/3 mx-auto">
+            <div class="flex flex-wrap -m-2">
+              <div class="p-2 w-1/2">
+                <div class="relative">
+                  <label for="name" class="leading-7 text-sm text-gray-600">Name</label>
+                  <input type="text" id="name" name="name" class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-yellow-500 focus:bg-white focus:ring-2 focus:ring-yellow-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
+                </div>
               </div>
-            </div>
-            <div class="p-2 w-1/2">
-              <div class="relative">
-                <label for="email" class="leading-7 text-sm text-gray-600">Email</label>
-                <input type="email" id="email" name="email" class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-yellow-500 focus:bg-white focus:ring-2 focus:ring-yellow-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
+              <div class="p-2 w-1/2">
+                <div class="relative">
+                  <label for="email" class="leading-7 text-sm text-gray-600">Email</label>
+                  <input type="email" id="email" name="email" class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-yellow-500 focus:bg-white focus:ring-2 focus:ring-yellow-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
+                </div>
               </div>
-            </div>
-            <div class="p-2 w-full">
-              <div class="relative">
-                <label for="message" class="leading-7 text-sm text-gray-600">Message</label>
-                <textarea id="message" name="message" class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-yellow-500 focus:bg-white focus:ring-2 focus:ring-yellow-200 h-32 text-base outline-none text-gray-700 py-1 px-3 resize-none leading-6 transition-colors duration-200 ease-in-out"></textarea>
+              <div class="p-2 w-full">
+                <div class="relative">
+                  <label for="message" class="leading-7 text-sm text-gray-600">Message</label>
+                  <textarea id="message" name="message" class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-yellow-500 focus:bg-white focus:ring-2 focus:ring-yellow-200 h-32 text-base outline-none text-gray-700 py-1 px-3 resize-none leading-6 transition-colors duration-200 ease-in-out"></textarea>
+                </div>
               </div>
-            </div>
-            <div class="p-2 w-full">
-              <button type="" class="submit-btn flex mx-auto text-white bg-yellow-500 border-0 py-2 px-8 focus:outline-none hover:bg-yellow-600 rounded text-lg">Send Message</button>
-            </div>
-            <div class="p-2 w-full pt-8 mt-8 border-t border-gray-200 text-center">
-              <a class="text-yellow-500">abcd@email.com</a>
-              <p class="leading-normal my-5">+920123456789
-                <br>Peshawar, KPK, Pakistan
-              </p>
-              <span class="inline-flex">
-                <a href="https://www.facebook.com/First-Light-Adventure-105579995288760/" target="_blank"><i class="fab fa-facebook social"></i></a>
-                <a href="https://instagram.com/first_lightadventure?utm_medium=copy_link" target="_blank"><i class="fab fa-instagram social"></i></a>
-                <!-- <a href="#"><i class="fab fa-twitter social"></i></a> -->
-              </span>
+              <div class="p-2 w-full">
+                <button type="" class="submit-btn flex mx-auto text-white bg-yellow-500 border-0 py-2 px-8 focus:outline-none hover:bg-yellow-600 rounded text-lg">Send Message</button>
+              </div>
+              <div class="p-2 w-full pt-8 mt-8 border-t border-gray-200 text-center">
+                <a class="text-yellow-500">abcd@email.com</a>
+                <p class="leading-normal my-5">+920123456789
+                  <br>Peshawar, KPK, Pakistan
+                </p>
+                <span class="inline-flex">
+                  <a href="https://www.facebook.com/First-Light-Adventure-105579995288760/" target="_blank"><i class="fab fa-facebook social"></i></a>
+                  <a href="https://instagram.com/first_lightadventure?utm_medium=copy_link" target="_blank"><i class="fab fa-instagram social"></i></a>
+                  <!-- <a href="#"><i class="fab fa-twitter social"></i></a> -->
+                </span>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
 
-    <footer>
-      <span><span class="far fa-copyright"></span> 2021 All Rights Reserved, First Light Adventure | Powered By <a href="#">XYZ Group</a></span>
-    </footer>
+      <footer>
+        <span>Copyright <span class="far fa-copyright"></span> 2021 All Rights Reserved, First Light Adventure | Powered By <a href="#">XYZ Group</a></span>
+      </footer>
 
       <script src="/assets/js/main.js"></script>
 </body>
