--- a/gallery.html
+++ b/gallery.html
@@ -62,37 +62,23 @@
                                     <h2>Image</h2>
                                 </div>
                                 <div class="image">
-                                    <img src="/assets/img/slider1.jpg">
-                                    <h2>Image</h2>
-                                </div>
-                                <div class="image">
-                                    <img src="/assets/img/random-2.jpeg">
-                                    <h2>Image</h2>
-                                </div>
-                                <div class="image">
-                                    <img src="/assets/img/random-1.jpg">
-                                    <h2>Image</h2>
-                                </div>
-                            </div>
-                            <div class="dream">
-                                <div class="image">
-                                    <img src="/assets/img/random-2.jpeg">
-                                    <h2>Image</h2>
-                                </div>
-                                <div class="image">
                                     <img src="/assets/img/card2.jpg">
                                     <h2>Image</h2>
                                 </div>
                                 <div class="image">
-                                    <img src="/assets/img/slider2.jpg">
+                                    <img src="/assets/img/card3.jpg">
                                     <h2>Image</h2>
                                 </div>
+                                <!-- <div class="image">
+                                    <img src="/assets/img/card1.jpg">
+                                    <h2>Image</h2>
+                                </div> -->
+                            </div>
+                            <div class="dream">
                                 <div class="image">
                                     <img src="/assets/img/card1.jpg">
                                     <h2>Image</h2>
                                 </div>
-                            </div>
-                            <div class="dream">
                                 <div class="image">
                                     <img src="/assets/img/card2.jpg">
                                     <h2>Image</h2>
@@ -101,14 +87,28 @@
                                     <img src="/assets/img/card3.jpg">
                                     <h2>Image</h2>
                                 </div>
+                                <!-- <div class="image">
+                                    <img src="/assets/img/card1.jpg">
+                                    <h2>Image</h2>
+                                </div> -->
+                            </div>
+                            <div class="dream">
                                 <div class="image">
-                                    <img src="/assets/img/coverimg.jpg">
+                                    <img src="/assets/img/card1.jpg">
+                                    <h2>Image</h2>
+                                </div>
+                                <div class="image">
+                                    <img src="/assets/img/card2.jpg">
                                     <h2>Image</h2>
                                 </div>
                                 <div class="image">
                                     <img src="/assets/img/card3.jpg">
                                     <h2>Image</h2>
                                 </div>
+                                <!-- <div class="image">
+                                    <img src="/assets/img/card1.jpg">
+                                    <h2>Image</h2>
+                                </div> -->
                             </div>
                         </div>  
                     </div>                    
@@ -118,9 +118,9 @@
         </div>
       </section>
     
-    <footer>
-      <span><span class="far fa-copyright"></span> 2021 All Rights Reserved, First Light Adventure | Powered By <a href="#">XYZ Group</a></span>
-    </footer>
+      <footer>
+        <span>Copyright <span class="far fa-copyright"></span> 2021 All Rights Reserved, First Light Adventure | Powered By <a href="#">XYZ Group</a></span>
+      </footer>
 
       <script src="/assets/js/main.js"></script>
 </body>
