--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
         </div>
     </section>
 
-    <section class="text-gray-600 body-font relative" id="contact">
+    <section class="text-gray-600 body-font relative contact-width contact-width-new" id="contact">
       <div class="container px-5 py-24 mx-auto">
         <div class="flex flex-col text-center w-full mb-12">
           <h2 class="title">Contact</h2>
@@ -94,7 +94,7 @@
     </section>
 
     <footer>
-      <span><span class="far fa-copyright"></span> 2021 All Rights Reserved, First Light Adventure | Powered By <a href="#">XYZ Group</a></span>
+      <span>Copyright <span class="far fa-copyright"></span> 2021 All Rights Reserved, First Light Adventure | Powered By <a href="#">XYZ Group</a></span>
     </footer>
 
       <script src="/assets/js/main.js"></script>
