--- a/index.html
+++ b/index.html
@@ -49,9 +49,8 @@
         </div>
     </section>
 
-    <section class="about" id="trip">
-    <!-- <div class="contact-width"> -->
-        <h2 class="title">Upcomming Trip's</h2>
+    <!-- <section class="about" id="trip">
+      <h2 class="title">Upcomming Trip's</h2>
         <div class="contact-width">    
     <div class="about-content cards">
     <div class="text-gray-600 body-font">
@@ -94,7 +93,60 @@
       </div>
     </div>
     </div>
-    </section>
+    </section> -->
+
+    <section class="teams" id="trip">
+      <div class="max-width">
+          <h2 class="title top-title">Upcomming Trip's</h2>
+          <div class="carousel owl-carousel">
+            <div class="ut-top-row">  
+              <div class="card UT-card">
+                    <div class="box">
+                        <img src="/assets/img/card1.jpg" alt="">
+                        <div class="text">Trip 1</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <div class="soc">
+                          <a href="/trip.html" class="card-btn">Read More</a>
+                        </div>  
+                    </div>
+                </div>
+                <div class="card UT-card">
+                  <div class="box">
+                      <img src="/assets/img/card2.jpg" alt="">
+                      <div class="text">Trip 2</div>
+                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                      <div class="soc">
+                        <a href="/trip.html" class="card-btn">Read More</a>
+                      </div>  
+                  </div>
+                </div>
+            </div>
+
+            <div class="ut-bottom-row">  
+              <div class="card UT-card">
+                    <div class="box">
+                        <img src="/assets/img/card3.jpg" alt="">
+                        <div class="text">Trip 3</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <div class="soc">
+                          <a href="/trip.html" class="card-btn">Read More</a>
+                        </div>  
+                    </div>
+                </div>
+                <div class="card UT-card">
+                  <div class="box">
+                      <img src="/assets/img/card1.jpg" alt="">
+                      <div class="text">Trip 4</div>
+                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                      <div class="soc">
+                        <a href="/trip.html" class="card-btn">Read More</a>
+                      </div>  
+                  </div>
+                </div>
+            </div>
+          </div>
+      </div>
+  </section>
 
     <section class="about gallery" id="gallery">
         <div class="max-width">
