--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
         </div>
     </section>
 
-    <!-- <section class="about" id="trip">
-      <h2 class="title">Upcomming Trip's</h2>
+    <section class="about" id="trip">
+    <!-- <div class="contact-width"> -->
+        <h2 class="title">Upcomming Trip's</h2>
         <div class="contact-width">    
     <div class="about-content cards">
     <div class="text-gray-600 body-font">
@@ -58,7 +59,7 @@
           <div class="flex flex-wrap -mx-4 -mb-10 text-center">
             <div class="sm:w-1/2 mb-10 px-4">
               <div class="rounded-lg h-64 overflow-hidden">
-                <a href="/assets/img/card1.jpg" target="_blank"><img alt="content" class="object-cover object-center h-full w-full" src="/assets/img/card1.jpg"></a>
+                <a href="/trip.html" target="_blank"><img alt="content" class="object-cover object-center h-full w-full" src="/assets/img/card1.jpg"></a>
               </div>
               <h2 class="title-font text-2xl font-medium text-gray-900 mt-6 mb-3">Card 1</h2>
               <p class="card-p leading-relaxed text-base">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, necessitatibus?</p>
@@ -66,26 +67,26 @@
             </div>
             <div class="sm:w-1/2 mb-10 px-4">
               <div class="rounded-lg h-64 overflow-hidden">
-                <a href="/trip.html" target="_blank"><img alt="content" class="object-cover object-center h-full w-full" src="/assets/img/card2.jpg"></a>
+                <a href="/trip.html" target="_blank"><img alt="content" class="object-cover object-center h-full w-full" src="/assets/img/yet_to_come.png"></a>
               </div>
-              <h2 class="title-font text-2xl font-medium text-gray-900 mt-6 mb-3">Card 2</h2>
-              <p class="card-p leading-relaxed text-base">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis, laborum.</p>
+              <h2 class="title-font text-2xl font-medium text-gray-900 mt-6 mb-3">Yet To Come</h2>
+              <p class="card-p leading-relaxed text-base">Yet To Come</p>
               <a href="/trip.html" class="card-btn">Read More</a>
             </div>
             <div class="sm:w-1/2 mb-10 px-4">
                 <div class="rounded-lg h-64 overflow-hidden">
-                  <a href="/assets/img/card3.jpg" target="_blank"><img alt="content" class="object-cover object-center h-full w-full" src="/assets/img/card3.jpg"></a>
+                  <a href="/trip.html" target="_blank"><img alt="content" class="object-cover object-center h-full w-full" src="/assets/img/yet_to_come.png"></a>
                 </div>
-                <h2 class="title-font text-2xl font-medium text-gray-900 mt-6 mb-3">Card 3</h2>
-                <p class="card-p leading-relaxed text-base">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam, deserunt.</p>
+                <h2 class="title-font text-2xl font-medium text-gray-900 mt-6 mb-3">Yet To Come</h2>
+                <p class="card-p leading-relaxed text-base">Yet To Come</p>
                 <a href="/trip.html" class="card-btn">Read More</a>
             </div>
             <div class="sm:w-1/2 mb-10 px-4">
                 <div class="rounded-lg h-64 overflow-hidden">
-                  <a href="/assets/img/card1.jpg" target="_blank"><img alt="content" class="object-cover object-center h-full w-full" src="/assets/img/card1.jpg"></a>
+                  <a href="/trip.html" target="_blank"><img alt="content" class="object-cover object-center h-full w-full" src="/assets/img/yet_to_come.png"></a>
                 </div>
-                <h2 class="title-font text-2xl font-medium text-gray-900 mt-6 mb-3">Card 4</h2>
-                <p class="card-p leading-relaxed text-base">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo, vel adipsicing|</p>
+                <h2 class="title-font text-2xl font-medium text-gray-900 mt-6 mb-3">Yet To Come</h2>
+                <p class="card-p leading-relaxed text-base">Yet To Come</p>
                 <a href="/trip.html" class="card-btn">Read More</a>
             </div>
           </div>
@@ -93,60 +94,7 @@
       </div>
     </div>
     </div>
-    </section> -->
-
-    <section class="teams" id="trip">
-      <div class="max-width">
-          <h2 class="title top-title">Upcomming Trip's</h2>
-          <div class="carousel owl-carousel">
-            <div class="ut-top-row">  
-              <div class="card UT-card">
-                    <div class="box">
-                        <img src="/assets/img/card1.jpg" alt="">
-                        <div class="text">Trip 1</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                        <div class="soc">
-                          <a href="/trip.html" class="card-btn">Read More</a>
-                        </div>  
-                    </div>
-                </div>
-                <div class="card UT-card">
-                  <div class="box">
-                      <img src="/assets/img/card2.jpg" alt="">
-                      <div class="text">Trip 2</div>
-                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                      <div class="soc">
-                        <a href="/trip.html" class="card-btn">Read More</a>
-                      </div>  
-                  </div>
-                </div>
-            </div>
-
-            <div class="ut-bottom-row">  
-              <div class="card UT-card">
-                    <div class="box">
-                        <img src="/assets/img/card3.jpg" alt="">
-                        <div class="text">Trip 3</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                        <div class="soc">
-                          <a href="/trip.html" class="card-btn">Read More</a>
-                        </div>  
-                    </div>
-                </div>
-                <div class="card UT-card">
-                  <div class="box">
-                      <img src="/assets/img/card1.jpg" alt="">
-                      <div class="text">Trip 4</div>
-                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                      <div class="soc">
-                        <a href="/trip.html" class="card-btn">Read More</a>
-                      </div>  
-                  </div>
-                </div>
-            </div>
-          </div>
-      </div>
-  </section>
+    </section>
 
     <section class="about gallery" id="gallery">
         <div class="max-width">
@@ -154,15 +102,15 @@
             <div class="about-content">
                 <div class="slideshow-container">
                     <div class="mySlides fade">
-                      <img src="/assets/img/slider1.jpg">
+                      <img src="/assets/img/gall1.jpeg">
                       <div class="slider-text">Caption One</div>
                     </div>
                     <div class="mySlides fade">
-                      <img src="/assets/img/slider2.jpg">
+                      <img src="/assets/img/gall2.jpeg">
                       <div class="slider-text">Caption Two</div>
                     </div>
                     <div class="mySlides fade">
-                      <img src="/assets/img/slider3.jpg">
+                      <img src="/assets/img/gall3.jpeg">
                       <div class="slider-text">Caption Three</div>
                     </div>
                     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -181,20 +129,20 @@
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
-                        <img src="/assets/img/random-1.jpg" alt="">
-                        <div class="text">Member 1</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <img src="/assets/img/team1.jpeg" alt="">
+                        <div class="text">M Esar ul haq </div>
+                        <p>Managing director</p>
                         <div class="soc">
-                          <a href="https://www.facebook.com/First-Light-Adventure-105579995288760/" target="_blank"><i class="fab fa-facebook social"></i></a>
-                          <a href="https://instagram.com/first_lightadventure?utm_medium=copy_link" target="_blank"><i class="fab fa-instagram social"></i></a>
+                          <a href="https://www.facebook.com/esar.ulhaq.35" target="_blank"><i class="fab fa-facebook social"></i></a>
+                          <a href="https://www.instagram.com/esar_ul_haq/" target="_blank"><i class="fab fa-instagram social"></i></a>
                         </div>  
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="/assets/img/random-2.jpeg" alt="">
-                        <div class="text">Member 2</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <img src="/assets/img/team2.jpeg" alt="">
+                        <div class="text">Saroosh khan</div>
+                        <p>General director</p>
                         <div class="soc">
                           <a href="https://www.facebook.com/First-Light-Adventure-105579995288760/" target="_blank"><i class="fab fa-facebook social"></i></a>
                           <a href="https://instagram.com/first_lightadventure?utm_medium=copy_link" target="_blank"><i class="fab fa-instagram social"></i></a>
@@ -234,8 +182,8 @@
                 <button type="" class="submit-btn flex mx-auto text-white bg-yellow-500 border-0 py-2 px-8 focus:outline-none hover:bg-yellow-600 rounded text-lg">Send Message</button>
               </div>
               <div class="p-2 w-full pt-8 mt-8 border-t border-gray-200 text-center">
-                <a class="text-yellow-500">abcd@email.com</a>
-                <p class="leading-normal my-5">+920123456789
+                <a class="text-yellow-500">company@firstlightadventuretour.com</a>
+                <p class="leading-normal my-5">
                   <br>Peshawar, KPK, Pakistan
                 </p>
                 <span class="inline-flex">
