--- a/contact.html
+++ b/contact.html
@@ -78,8 +78,8 @@
               <button type="" class="submit-btn flex mx-auto text-white bg-yellow-500 border-0 py-2 px-8 focus:outline-none hover:bg-yellow-600 rounded text-lg">Send Message</button>
             </div>
             <div class="p-2 w-full pt-8 mt-8 border-t border-gray-200 text-center">
-              <a class="text-yellow-500">abcd@email.com</a>
-              <p class="leading-normal my-5">+920123456789
+              <a class="text-yellow-500">company@firstlightadventuretour.com</a>
+              <p class="leading-normal my-5">
                 <br>Peshawar, KPK, Pakistan
               </p>
               <span class="inline-flex">
