--- a/gallery.html
+++ b/gallery.html
@@ -57,16 +57,16 @@
                     <div class="container">
                         <div class="box">  
                             <div class="dream">
+                                <!-- <div class="image">
+                                    <img src="/assets/img/gall1.jpeg">
+                                    <h2>Image</h2>
+                                </div> -->
                                 <div class="image">
-                                    <img src="/assets/img/card1.jpg">
+                                    <img src="/assets/img/gall2.jpeg">
                                     <h2>Image</h2>
                                 </div>
                                 <div class="image">
-                                    <img src="/assets/img/card2.jpg">
-                                    <h2>Image</h2>
-                                </div>
-                                <div class="image">
-                                    <img src="/assets/img/card3.jpg">
+                                    <img src="/assets/img/gall3.jpeg">
                                     <h2>Image</h2>
                                 </div>
                                 <!-- <div class="image">
@@ -76,37 +76,33 @@
                             </div>
                             <div class="dream">
                                 <div class="image">
-                                    <img src="/assets/img/card1.jpg">
+                                    <img src="/assets/img/gall5.jpeg">
                                     <h2>Image</h2>
                                 </div>
                                 <div class="image">
-                                    <img src="/assets/img/card2.jpg">
-                                    <h2>Image</h2>
-                                </div>
-                                <div class="image">
-                                    <img src="/assets/img/card3.jpg">
+                                    <img src="/assets/img/gall4.jpeg">
                                     <h2>Image</h2>
                                 </div>
                                 <!-- <div class="image">
-                                    <img src="/assets/img/card1.jpg">
+                                    <img src="/assets/img/gall6.jpeg">
+                                    <h2>Image</h2>
+                                </div>
+                                <div class="image">
+                                    <img src="/assets/img/gall7.jpeg">
                                     <h2>Image</h2>
                                 </div> -->
                             </div>
                             <div class="dream">
                                 <div class="image">
-                                    <img src="/assets/img/card1.jpg">
+                                    <img src="/assets/img/gall8.jpeg">
                                     <h2>Image</h2>
                                 </div>
                                 <div class="image">
-                                    <img src="/assets/img/card2.jpg">
-                                    <h2>Image</h2>
-                                </div>
-                                <div class="image">
-                                    <img src="/assets/img/card3.jpg">
+                                    <img src="/assets/img/gall7.jpeg">
                                     <h2>Image</h2>
                                 </div>
                                 <!-- <div class="image">
-                                    <img src="/assets/img/card1.jpg">
+                                    <img src="/assets/img/gall1.jpeg">
                                     <h2>Image</h2>
                                 </div> -->
                             </div>
